still very alpha don't use

--- a/credentials/aws.yaml
+++ b/credentials/aws.yaml
@@ -1,64 +1,74 @@
-# AWS Credentials for yamlforge
-# Environment variable configuration - no Kubernetes secrets required
+# AWS Credentials Configuration
+# YamlForge supports multiple AWS authentication methods
 
 # =============================================================================
-# REQUIRED ENVIRONMENT VARIABLES
+# AUTHENTICATION METHODS (Choose ONE)
 # =============================================================================
-# Set these environment variables before running yamlforge:
 
-# AWS Access Credentials
-AWS_ACCESS_KEY_ID: "your_aws_access_key_id"
-AWS_SECRET_ACCESS_KEY: "your_aws_secret_access_key"
-AWS_DEFAULT_REGION: "us-east-1"  # Optional, defaults to us-east-1
+# Method 1: Access Keys (Development)
+access_key:
+  enabled: false
+  access_key_id: ""
+  secret_access_key: ""
+  region: "us-east-1"
+
+# Method 2: IAM Role (Production/Cross-Account)
+iam_role:
+  enabled: false
+  role_arn: "arn:aws:iam::ACCOUNT:role/YamlForgeRole"
+  session_name: "yamlforge-session"
+  region: "us-east-1"
+
+# Method 3: AWS Profile (Recommended)
+profile:
+  enabled: true
+  profile_name: "default"  # or your custom profile name
+  region: "us-east-1"
+
+# Method 4: Environment Variables (CI/CD)
+environment:
+  enabled: false
+  region: "us-east-1"
+  # Expects: AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY
+
+# =============================================================================
+# ROSA CLUSTER CONFIGURATION (Auto-Discovery)
+# =============================================================================
+
+# YamlForge automatically discovers:
+# - aws_account_id: Current AWS account from credentials
+# - aws_rosa_creator_arn: Current user/role ARN for ROSA
+# - aws_billing_account_id: Defaults to aws_account_id unless set below
+
+# OPTIONAL: Set billing account if different from current account
+# Environment Variable: AWS_BILLING_ACCOUNT_ID
+# If not set, defaults to the current AWS account ID
+
+# =============================================================================
+# TERRAFORM VARIABLE OVERRIDES (Optional)
+# =============================================================================
+
+terraform_vars:
+  aws_region: "us-east-1"
+  # These are auto-discovered, but can be overridden if needed:
+  # aws_account_id: "123456789012"
+  # aws_billing_account_id: "123456789012" 
+  # aws_rosa_creator_arn: "arn:aws:iam::123456789012:user/username"
 
 # =============================================================================
 # SETUP INSTRUCTIONS
 # =============================================================================
-#
-# Step 1: Get AWS Credentials
-# 1. Log into AWS Console
-# 2. Go to IAM → Users → Your User → Security credentials
-# 3. Create new Access Key
-# 4. Copy Access Key ID and Secret Access Key
-#
-# Step 2: Set Environment Variables
-# export AWS_ACCESS_KEY_ID="AKIA1234567890EXAMPLE"
-# export AWS_SECRET_ACCESS_KEY="wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
-# export AWS_DEFAULT_REGION="us-east-1"
-#
-# Step 3: Run yamlforge (automatically uses environment variables)
-# yamlforge convert my-infrastructure.yaml
 
-# =============================================================================
-# REQUIRED PERMISSIONS
-# =============================================================================
-# The AWS credentials should have the following permissions:
-# - EC2 read access (for AMI discovery)
-# - Route53 read/write access (for DNS-01 challenges)
-# - IAM read access (for role validation)
-#
-# Example IAM policy:
-# {
-#   "Version": "2012-10-17", 
-#   "Statement": [
-#     {
-#       "Effect": "Allow",
-#       "Action": [
-#         "ec2:DescribeImages",
-#         "ec2:DescribeRegions",
-#         "route53:ListHostedZones",
-#         "route53:GetChange",
-#         "route53:ChangeResourceRecordSets"
-#       ],
-#       "Resource": "*"
-#     }
-#   ]
-# }
+# 1. Configure AWS CLI: aws configure
+# 2. Or set environment variables:
+#    export AWS_ACCESS_KEY_ID="your-key"
+#    export AWS_SECRET_ACCESS_KEY="your-secret"
+#    export AWS_DEFAULT_REGION="us-east-1"
+# 3. (Optional) Set billing account:
+#    export AWS_BILLING_ACCOUNT_ID="123456789012"
+# 4. Test: aws sts get-caller-identity
 
-# =============================================================================
-# VALIDATION
-# =============================================================================
-# Verify your environment variables are set:
-# echo "AWS Access Key: $AWS_ACCESS_KEY_ID"
-# echo "AWS Region: $AWS_DEFAULT_REGION"
-# echo "Secret Key Set: $(if [ -n "$AWS_SECRET_ACCESS_KEY" ]; then echo "Yes"; else echo "No"; fi)" 
+# ROSA Prerequisites:
+# - AWS account with ROSA service enabled
+# - Appropriate IAM permissions for ROSA
+# - Red Hat OpenShift Cluster Manager token 
