--- a/credentials/openshift.yaml
+++ b/credentials/openshift.yaml
@@ -1,4 +1,4 @@
-# OpenShift Cluster Credentials for yamlforge
+# OpenShift Credentials for yamlforge
 # Environment variable configuration - no Kubernetes secrets required
 
 # =============================================================================
@@ -6,7 +6,17 @@
 # =============================================================================
 # Set these environment variables before running yamlforge:
 
-# OpenShift Cluster Connection
+# =============================================================================
+# RED HAT OPENSHIFT CLUSTER MANAGER API (Required for ROSA/Managed OpenShift)
+# =============================================================================
+# For creating and managing ROSA clusters, OpenShift Dedicated, etc.
+REDHAT_OPENSHIFT_TOKEN: "your_cluster_manager_api_token"
+REDHAT_OPENSHIFT_URL: "https://api.openshift.com"     # Default Cluster Manager API URL
+
+# =============================================================================
+# OPENSHIFT CLUSTER CONNECTION (For existing cluster management)
+# =============================================================================
+# For connecting to existing OpenShift clusters
 OPENSHIFT_CLUSTER_URL: "https://api.cluster.example.com:6443"
 OPENSHIFT_TOKEN: "your_openshift_token"
 OPENSHIFT_USERNAME: "your_username"          # Optional, if using username/password
@@ -20,6 +30,22 @@ OPENSHIFT_NAMESPACE: "default"               # Optional, defaults to default
 # SETUP INSTRUCTIONS
 # =============================================================================
 #
+# For ROSA/OpenShift Dedicated Deployment:
+# ========================================
+# Step 1: Get Red Hat OpenShift Cluster Manager API Token
+# 1. Visit https://console.redhat.com/openshift/token
+# 2. Log in with your Red Hat account
+# 3. Copy the "Offline Token" (this is your API token)
+#
+# Step 2: Set Environment Variables for Cluster Manager
+# export REDHAT_OPENSHIFT_TOKEN="your_offline_token_here"
+# export REDHAT_OPENSHIFT_URL="https://api.openshift.com"  # Default
+#
+# Step 3: Run yamlforge (automatically creates ROSA clusters)
+# yamlforge convert my-rosa-config.yaml
+#
+# For Existing Cluster Management:
+# ===============================
 # Step 1: Get OpenShift Cluster Information
 # 1. Log into OpenShift Web Console
 # 2. Click on your username (top right) → Copy login command
@@ -31,18 +57,33 @@ OPENSHIFT_NAMESPACE: "default"               # Optional, defaults to default
 # oc whoami --show-server  # Get cluster URL
 # oc whoami --show-token   # Get authentication token
 #
-# Step 3: Set Environment Variables
+# Step 3: Set Environment Variables for Cluster Access
 # export OPENSHIFT_CLUSTER_URL="https://api.cluster.example.com:6443"
 # export OPENSHIFT_TOKEN="sha256~your-token-here"
 # export OPENSHIFT_NAMESPACE="default"
 #
-# Step 4: Run yamlforge (automatically uses environment variables)
+# Step 4: Run yamlforge (manages existing cluster)
 # yamlforge convert my-openshift-config.yaml
 
 # =============================================================================
 # AUTHENTICATION METHODS
 # =============================================================================
 # 
+# Red Hat Cluster Manager API Token (for ROSA/Managed OpenShift):
+# ================================================================
+# 1. Red Hat Offline Token (Recommended for automation)
+#    - Visit: https://console.redhat.com/openshift/token
+#    - Copy "Offline Token" 
+#    - Never expires, refreshes automatically
+#    - Use: export REDHAT_OPENSHIFT_TOKEN="your_offline_token"
+#
+# 2. Red Hat Personal Access Token
+#    - Visit: https://console.redhat.com/openshift/token
+#    - Create a personal access token with specific permissions
+#    - Expires based on configuration
+#
+# OpenShift Cluster Connection (for existing clusters):
+# ====================================================
 # Method 1: Service Account Token (Recommended for automation)
 # 1. Create service account: oc create sa yamlforge-sa
 # 2. Grant permissions: oc adm policy add-cluster-role-to-user cluster-admin -z yamlforge-sa
@@ -93,11 +134,20 @@ OPENSHIFT_NAMESPACE: "default"               # Optional, defaults to default
 # VALIDATION
 # =============================================================================
 # Verify your environment variables are set:
+#
+# For Red Hat Cluster Manager API (ROSA/Managed OpenShift):
+# echo "Red Hat OpenShift Token Set: $(if [ -n "$REDHAT_OPENSHIFT_TOKEN" ]; then echo "Yes"; else echo "No"; fi)"
+# echo "Red Hat OpenShift URL: $REDHAT_OPENSHIFT_URL"
+#
+# For OpenShift Cluster Connection:
 # echo "OpenShift Cluster URL: $OPENSHIFT_CLUSTER_URL"
 # echo "OpenShift Namespace: $OPENSHIFT_NAMESPACE"
-# echo "Token Set: $(if [ -n "$OPENSHIFT_TOKEN" ]; then echo "Yes"; else echo "No"; fi)"
+# echo "Cluster Token Set: $(if [ -n "$OPENSHIFT_TOKEN" ]; then echo "Yes"; else echo "No"; fi)"
 #
-# Test connectivity:
+# Test Red Hat Cluster Manager API connectivity:
+# rosa whoami  # If you have rosa CLI installed
+#
+# Test cluster connectivity:
 # oc login --token=$OPENSHIFT_TOKEN --server=$OPENSHIFT_CLUSTER_URL
 # oc cluster-info
 # oc get nodes 
