--- a/examples/testing/simple_test.yaml
+++ b/examples/testing/simple_test.yaml
@@ -1,13 +1,14 @@
 ---
 # Simple Test Example
-# Basic single-instance deployment for testing
+# Demonstrates basic YamlForge functionality
+
+guid: "smp01"
 
 yamlforge:
   cloud_workspace:
     name: "simple-test"
     description: "Simple testing workspace"
     tags:
-      guid: "st-2024-001"
 
   instances:
     - name: "test-server"
