--- a/examples/testing/rhel_latest_test.yaml
+++ b/examples/testing/rhel_latest_test.yaml
@@ -7,7 +7,7 @@ yamlforge:
     name: "rhel-latest-test"
     description: "RHEL latest image discovery testing workspace"
     tags:
-      guid: "rlt-2024-001"
+      guid: "rhl01"
 
   instances:
     # AWS RHEL latest testing
@@ -51,13 +51,13 @@ yamlforge:
 
     # IBM Cloud RHEL latest testing
     - name: "ibm-rhel9-latest"
-      provider: "ibm"
+      provider: "ibm_classic"
       size: "medium"
       image: "RHEL9-latest"
       region: "us-south"
       
     - name: "ibm-rhel8-latest"
-      provider: "ibm"
+      provider: "ibm_vpc"
       size: "medium"
       image: "RHEL8-latest"
       region: "us-east"
@@ -70,6 +70,7 @@ yamlforge:
       image: "RHEL9-latest"
       tags:
         test_type: "cost_optimization"
+      region: "us-east-1"
 
     # ARM64 RHEL testing (if supported)
     - name: "aws-rhel9-arm64"
